Fixed alignment issues bymaking wrapperm the only element with a specified width and by using text-align:right on page name

--- a/resume.css
+++ b/resume.css
@@ -13,11 +13,10 @@ body {
 div#wrapper {
 	width: 850px;
 	margin: 0 auto;
-	padding: 25px 0px;	
+	margin-top:35px;	
 }
 
 div#header{
-	width: 850px;
 	margin:0 auto;  
 	padding: 30px 25px;
 	background: url(img/swirls_blue2.jpg);
@@ -25,9 +24,9 @@ div#header{
 }
 
 div#content{
-	width:800px; 
+
 	margin: 0 auto; 
-	padding:15px 50px;
+	padding:15px 35px;
 	font-family:sans-serif;
 	font-size:12px;
 	background-color: black;
@@ -85,8 +84,7 @@ h2{
 
 /*page name*/
 h3{
-	position:absolute;
-	margin-left:715px; 
+	text-align:right; 
 	font-size:22px; 
 	font-weight:bold;
 	color:#527280; 
@@ -106,7 +104,7 @@ h4 {
 /*heading*/
 
 h5 {
-	padding:5px 10px;
+	padding:5px 100px 5px 10px;
 	font-size:16px;
 	border-bottom: thin solid #527280; 
 }
